# pi-companion

./: .gitignore  CHANGELOG.md  README.md  app.json  eas.json  install.sh  metro.config.js  package.json
.github/workflows/: ci.yml  release.yml
.yarn/patches/: react-native-sse-npm-1.2.1-750984c79d.patch
app/: _layout.tsx  connect.tsx
app/(app)/: _layout.tsx  index.tsx  profile.tsx  servers.tsx  settings.tsx
app/(app)/chat/: [sessionId].tsx
app/(app)/desktop/: _layout.tsx  index.tsx
backend/: Cargo.toml  build.rs
backend/src/: app.rs  main.rs  web.rs
backend/src/cli/: init.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/models/: agent.rs  mod.rs
backend/src/routes/: agent.rs  auth.rs  desktop.rs  fs.rs  git.rs  health.rs  mod.rs  package.rs  workspace.rs
backend/src/server/: mod.rs  openapi.rs  router.rs  state.rs
backend/src/services/: agent.rs  connection.rs  desktop.rs  git.rs  mod.rs  package.rs  pairing.rs  session.rs  sse_registry.rs
backend/src/services/provider/: traits.rs
components/: anthaathi-logo.tsx  pi-logo.tsx  themed-text.tsx
components/ui/: animated-list-item.tsx
constants/: theme.ts
features/agent/: browser-notifications.ts  event-source.ts  extension-ui.ts  mode.ts  theme.ts  types.ts
features/agent/components/: connection-status-banner.tsx  extension-ui-dialog.tsx
features/agent/hooks/: use-agent-config.ts  (+2 more)
features/api/: client-auth.ts  unwrap.ts
hooks/: use-app-mode.ts  use-color-scheme.ts
scripts/: test-subagent-viewer.mjs
web-stubs/: expo-camera.js  react-native-pager-view.js
(+110 files in other folders)
