[package]
name = "pi-server"
version = "1.10.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3"
axum = { version = "0.8.8", features = ["ws", "json", "multipart"] }
bcrypt = "0.19.0"
chrono = { version = "0.4.44", features = ["serde"] }
hostname = "0.4.2"
local-ip-address = "0.6.10"
qrcode = "0.14.1"
rand = "0.10.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
futures-core = "0.3"
futures-util = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1"
toml = "1.0.6"
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.22.0", features = ["v4"] }
rust-embed = "8.11.0"
mime_guess = "2.0.5"
clap = { version = "4.6.0", features = ["derive"] }
async-trait = "0.1.89"
reqwest = { version = "0.13.2", features = ["rustls"] }
urlencoding = "2.1.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
